ci: add GitHub Actions deploy workflow